manifests/cluster-addons/traefik/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-funnel
  namespace: traefik
  annotations:
    tailscale.com/funnel: 'true'
spec:
  ingressClassName: tailscale
  rules:
    - host: traefik
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 8000
