manifests/cluster-addons/traefik/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik
  namespace: traefik
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cloudflared
            app.kubernetes.io/name: cloudflared

  egress:
    - toEntities:
        - kube-apiserver
        - cluster # represents everything exposed by Ingress(Route)

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - rules:
            dns:
              - matchPattern: '*'
          ports:
            - port: '53'
              protocol: ANY
